@@ -19,7 +19,6 @@ import socket_server.domain.friend.dto.FriendSummaryRes;
 import socket_server.domain.friend.service.FriendSocketService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -40,19 +39,21 @@ public class FriendService {
     }
 
     @Transactional(readOnly = true)
-    public List<FriendRes> searchFriend(Long userId, String keyword) {
+    public List<FriendRes> searchUser(Long userId, String keyword) {
         User user = userService.findUserByUserId(userId);
+        List<Friend> friends = friendRepository.findAllByUserId(userId);
 
-        List<Friend> friends = friendRepository.searchFriendsByNickname(userId, keyword);
+        List<User> friendUsers = friends.stream()
+                .map(friend -> friend.getOther(user))
+                .toList();
 
-        return friends.stream()
-                .map(friend -> {
-                    User friendUser = friend.getUser1().getId().equals(userId)
-                            ? friend.getUser2()
-                            : friend.getUser1();
-                    return FriendRes.from(friendUser);
-                })
-                .collect(Collectors.toList());
+        List<User> users = userService.findUserListByKeyword(keyword);
+
+        return users.stream()
+                .filter(u -> !u.getId().equals(userId))
+                .filter(u -> friendUsers.stream().noneMatch(f -> f.getId().equals(u.getId())))
+                .map(FriendRes::from)
+                .toList();
     }
 
     @Transactional(readOnly = true)
